Some changes at css

--- a/index.html
+++ b/index.html
@@ -58,21 +58,22 @@
             <p>
                 So, you can find me on instagram, or facebook
             </p>
-            <a href="https://www.facebook.com/stepan.petryykovych">Facebook</a>
-            <a href="https://www.instagram.com">Instagram</a>
-            <p>Or you can send me some message at this form</p>
-            <form>
-                <input type="text" name="Your Name" placeholder="Enter your name" />
-                <br>
-                <input type="text" name="Your message" placeholder="Ask something" />
-                <br>
-                <input type="submit" value="Submit" />
-            </form>
+            <div>
+                <a href="https://www.facebook.com/stepan.petryykovych">Facebook</a>
+                <a href="https://www.instagram.com">Instagram</a>
+                <p>Or you can send me some message at this form</p>
+                <form class="send-message">
+                    <input type="text" name="Your Name" placeholder="Enter your name" />
+                    <br>
+                    <input type="text" name="Your message" placeholder="Ask something" />
+                    <br>
+                    <input class="button" type="submit" value="Submit" />
+                </form>
+            </div>
+            <footer>
+                Copyright. Bla bla bla bla
+            </footer>
         </div>
-        <footer>
-            Copyright. Bla bla bla bla
-        </footer>
-    </div>
 </body>
 
 </html>
