--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Easy Parking</h5>
                             <p class="card-text">Easy Parking (February 2018 – now)</p>
-                            <a href="#" class="btn btn-info" data-toggle="modal" data-target="#productInfo">Info</a>
+                            <a href="#" class="btn btn-info" data-toggle="modal" data-target="#easyParking">Info</a>
                         </div>
                     </article>
                     <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
@@ -60,7 +60,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Praxis</h5>
                             <p class="card-text">Praxis (February 2018 – May 2018)</p>
-                            <a href="#" class="btn btn-info" data-toggle="modal" data-target="#productInfo">Info</a>
+                            <a href="#" class="btn btn-info" data-toggle="modal" data-target="#praxis">Info</a>
                         </div>
                     </article>
                 </div>
@@ -107,11 +107,11 @@
                     </div>
                 </div>
 
-                <div class="modal fade" id="productInfo" tabindex="-1" role="dialog" aria-labelledby="productInfoLabel" aria-hidden="true">
+                <div class="modal fade" id="easyParking" tabindex="-1" role="dialog" aria-labelledby="productInfoLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="productInfoLabel">Modal title</h5>
+                                <h5 class="modal-title" id="productInfoLabel">Easy parking</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                   <span aria-hidden="true">&times;</span>
                                 </button>
@@ -121,13 +121,37 @@
                                     <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
                                     <div class="card-body">
                                         <h5 class="card-title">Tesla X</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p class="card-text">Easy Parking (February 2018 – now) - is designed to help drivers quickly find a free space, improve parking space and ease traffic. Sensors embedded in the ground will determine whether parking spaces are occupied
+                                            or free. Drivers will be able to get real-time parking information. Drivers will be able to easily find a free space using a map when only a few parking spaces are available.</p>
                                     </div>
                                 </article>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade" id="praxis" tabindex="-1" role="dialog" aria-labelledby="productInfoLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="productInfoLabel">Praxis</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <article class="card">
+                                    <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Tesla X</h5>
+                                        <p class="card-text">Praxis (February 2018 – May 2018) - Praxis is a web service that will offer you a new approach to dealing with course problem, both for companies that create this course and for students who want to go through it.</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -138,6 +162,10 @@
             Copyright. Bla bla bla bla
         </footer>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
