Fourth commit with bootstrap

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <article class="card">
                                     <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
                                     <div class="card-body">
-                                        <h5 class="card-title">Tesla X</h5>
+                                        <h5 class="card-title">Easy Parking</h5>
                                         <p class="card-text">Easy Parking (February 2018 – now) - is designed to help drivers quickly find a free space, improve parking space and ease traffic. Sensors embedded in the ground will determine whether parking spaces are occupied
                                             or free. Drivers will be able to get real-time parking information. Drivers will be able to easily find a free space using a map when only a few parking spaces are available.</p>
                                     </div>
@@ -145,7 +145,7 @@
                                 <article class="card">
                                     <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
                                     <div class="card-body">
-                                        <h5 class="card-title">Tesla X</h5>
+                                        <h5 class="card-title">Praxis</h5>
                                         <p class="card-text">Praxis (February 2018 – May 2018) - Praxis is a web service that will offer you a new approach to dealing with course problem, both for companies that create this course and for students who want to go through it.</p>
                                     </div>
                                 </article>
