--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="row">
                 <article class="card col-12 col-sm-6 col-md-4 col-lg-5">
-                    <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
+                    <img src="img/EasyParking.png" class="card-img-top" alt="Tesla Model X">
                     <div class="card-body">
                         <h5 class="card-title">Easy Parking</h5>
                         <p class="card-text">Easy Parking (February 2018 – now)</p>
@@ -59,7 +59,7 @@
                     </div>
                 </article>
                 <article class="card col-12 col-sm-6 col-md-4 col-lg-5">
-                    <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
+                    <img src="img/praxis.jpg" class="card-img-top" alt="Tesla Model X">
                     <div class="card-body">
                         <h5 class="card-title">Praxis</h5>
                         <p class="card-text">Praxis (February 2018 – May 2018)</p>
@@ -114,7 +114,7 @@
             </div>
             <div class="modal-body">
                 <article class="card">
-                    <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
+                    <img src="img/EasyParking.png" class="card-img-top" alt="Tesla Model X">
                     <div class="card-body">
                         <h5 class="card-title">Easy parking</h5>
                         <p class="card-text">Easy Parking (February 2018 – now) - is designed to help drivers quickly find a free space, improve parking space and ease traffic. Sensors embedded in the ground will determine whether parking spaces are occupied or free. Drivers
@@ -145,7 +145,7 @@
             </div>
             <div class="modal-body">
                 <article class="card">
-                    <img src="img/working.jpg" class="card-img-top" alt="Tesla Model X">
+                    <img src="img/praxis.jpg" class="card-img-top" alt="Tesla Model X">
                     <div class="card-body">
                         <h5 class="card-title">Praxis</h5>
                         <p class="card-text">Praxis (February 2018 – May 2018) - Praxis is a web service that will offer you a new approach to dealing with course problem, both for companies that create this course and for students who want to go through it.</p>
