--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </article>
                 <article class="card col-12 col-sm-6 col-md-4 col-lg-5">
-                    <img src="img/praxis.jpg" class="card-img-top" alt="Tesla Model X">
+                    <img src="img/Praxis.png" class="card-img-top" alt="Tesla Model X">
                     <div class="card-body">
                         <h5 class="card-title">Praxis</h5>
                         <p class="card-text">Praxis (February 2018 – May 2018)</p>
@@ -145,7 +145,7 @@
             </div>
             <div class="modal-body">
                 <article class="card">
-                    <img src="img/praxis.jpg" class="card-img-top" alt="Tesla Model X">
+                    <img src="img/Praxis.png" class="card-img-top" alt="Tesla Model X">
                     <div class="card-body">
                         <h5 class="card-title">Praxis</h5>
                         <p class="card-text">Praxis (February 2018 – May 2018) - Praxis is a web service that will offer you a new approach to dealing with course problem, both for companies that create this course and for students who want to go through it.</p>
